objects/Partner_Portal_Video__c.object
<CustomObject>
    <description>Used to store the links to videos to display in the partner portal.</description>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date and time the video will be removed from displays.  If omitted, the video will be visible until it is deleted.</description>
        <label>Video Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Home_Page_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the video is eligible for display on the Partner Portal Home Page.</description>
        <inlineHelpText>If this box is checked, the video will be eligible for display on the Partner Portal Home Page.  The video chosen for display will be selected at random from videos currently visible and flagged with this checkbox.</inlineHelpText>
        <label>Video Used on Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <description>The date and time the video will become visible on displays.  If omitted, the video will be published immediately.</description>
        <label>Video Publication Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the video for display purposes.</description>
        <label>Video Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Link_Url__c</fullName>
        <formula>HYPERLINK(&apos;/partner/Partner_Portal_Video_Page?id=&apos;+ Id ,  Title__c )</formula>
        <label>Video Link Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <description>URL or *other* identifier for videos.  It must contain enough information for the video handler to determine the type of video (i.e., YouTube vs. Video Cloud)</description>
        <label>Video Link or ID</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_Type__c</fullName>
        <label>Video Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Youtube</fullName>
                    <default>true</default>
                    <label>Youtube</label>
                </value>
                <value>
                    <fullName>Brightcove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Portal Video</label>
    <listViews>
        <fullName>Partner_Portal_Video_List</fullName>
        <columns>Video_Link_Url__c</columns>
        <columns>Publication_Date__c</columns>
        <columns>Title__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Publication_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Partner Portal Video List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PPV-{000000}</displayFormat>
        <label>Video Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Portal Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>